# tsc

./: .gitignore  ADVANCED_GENERICS_STATUS.md  ADVANCED_TRANSFORMATION_RULES_SUMMARY.md  ARC_VALIDATION_REPORT.md  ARRAY_TYPE_SUPPORT_STATUS.md  AccessibilityTests.swift  AdvancedColorTools.swift  AdvancedDrawingTools.swift  AdvancedDrawingToolsTests.swift  ArtworkSaveSystem.swift  AudioSystem.swift  CLASS_IMPLEMENTATION_SUMMARY.md  CLOSURE_IMPLEMENTATION_REPORT.md  CMakeLists.txt  CODE_COVERAGE_ANALYSIS_SUMMARY.md  CODE_REVIEW_SUMMARY.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_COMPILER_STATUS.md  COMPREHENSIVE_GENERIC_INTERFACE_TESTING_REPORT.md  COMPREHENSIVE_GENERIC_TESTING_REPORT.md  COMPREHENSIVE_INTEGRATION_TESTING_REPORT.md  COMPREHENSIVE_TESTING_FINAL_SUMMARY.md  COMPREHENSIVE_TESTING_IMPLEMENTATION.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  COMPREHENSIVE_TEST_SUMMARY.md  COVERAGE_VALIDATION_SUMMARY.md  CanvasManagement.swift  ColorFillingApp.swift  ColorFillingAppTests.swift  ColorFillingAppUITests.swift  ColorMixingPalette.swift  ColoringCanvasView.swift  ContentView.swift  DESTRUCTURING_OBJECT_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT_SUMMARY.md  ENHANCED_GENERICS_IMPLEMENTATION_SUMMARY.md  ENUM_AND_TYPE_ALIAS_IMPLEMENTATION_SUMMARY.md  ENUM_IMPLEMENTATION_SUMMARY.md  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  (+392 more)
src/: AST.cpp  ASTNodeType.cpp  CMakeLists.txt  Compiler.cpp  TargetRegistry.cpp  Token.cpp  main.cpp
src/codegen/: EnhancedIRGen.cpp  ExecutableLinker.cpp  LLVMARCGen.cpp  LLVMCodeGen.cpp  LLVMCodeGen.cpp.backup2  LLVMCodeGen.cpp.backup3  LLVMCodeGen.h  LLVMCodeGenRefactored.cpp  LLVMExpressionGen.cpp  LLVMMemoryGen.cpp  LLVMStatementGen.cpp  LLVMTypeGen.cpp  ObjectFileGenerator.cpp
src/lexer/: Lexer.cpp  LexerRefactored.cpp
src/parser/: Parser.cpp  Parser.h  ParserRefactored.h  VectorTokenStream.cpp
src/runtime/: CMakeLists.txt  GarbageCollector.cpp  GarbageCollector.h  LLVMMemoryManager.cpp  LLVMMemoryManager.h  ReferenceCounter.cpp  ReferenceCounter.h  RuntimeFunctionRegistry.cpp  TypeScriptObject.h  array_operations.c  console_operations.c  exception_handling.c  global_constants.c  memory_audit.c  memory_audit.h  memory_operations.c  runtime.h  string_operations.c
src/semantic/: CycleDetector.cpp  DependencyScanner.cpp  DestructuringSemanticAnalyzer.cpp  DestructuringTypeChecker.cpp  EnhancedDestructuringTypeChecker.cpp  EnhancedGenericsTypeChecker.cpp  ErrorHandlingSemanticAnalyzer.cpp  ForOfSemanticAnalyzer.cpp  ForOfTypeChecker.cpp  FunctionSemanticAnalyzer.cpp  GenericConstraintChecker.cpp  GenericConstraints.cpp  GenericOverloading.cpp  GenericTypeInference.cpp  ModuleResolver.cpp  ModuleSymbolTable.cpp  ModuleSystemSemanticAnalyzer.cpp  ModuleSystemTypeChecker.cpp  SemanticAnalyzer.cpp  SemanticAnalyzerRefactored.cpp  SemanticAnalyzerRefactored.h  SymbolTable.cpp  TypeChecker.cpp  TypeChecker.h  TypeSystem.cpp
src/testing/: AdvancedTestDriver.cpp  AdvancedTransformationRules.cpp  CodeCoverageAnalysis.cpp  CodeTransformationFramework.cpp  ErrorReportingValidator.cpp  TargetedErrorTestGenerator.cpp  TestCaseGenerator.cpp  TransformationTestDriver.cpp
src/utils/: ASTPrinter.cpp  ASTVisitorImpl.h  DiagnosticEngine.cpp  DiagnosticInfo.cpp  EnhancedDiagnosticEngine.cpp  EnhancedErrorReporting.cpp  Logger.cpp
test/: ARC_TEST_DOCUMENTATION.md  CMakeLists.txt  arc_design_patterns.ts  arc_integration_tests.ts  arc_regression_tests.ts  arc_retain_release_tests.c  arc_tests.ts  arc_typescript_integration_tests.ts  basic_cycle_test.ts  basic_memory_test.ts  compiler_cycle_prevention.ts  comprehensive_memory_leak_test.ts  comprehensive_raii_test.ts  constructor_param_test.ts  cycle_detection_test.ts  debug_destructor_signature_test.ts  debug_destructor_test.ts  debug_id_value_test.ts  debug_multiple_test.ts  destructor_calling_test.ts  destructor_error_test.ts  destructor_order_test.ts  destructor_syntax_test.ts  different_destructors_test.ts  empty_string_test.ts  enhanced_cycle_detection.c  gradual_complexity_test.ts  heisenbug_minimal.ts  heisenbug_regression_test.ts  hello_world_test.ts  memory_address_test.ts  memory_layout_test.ts  memory_leak_analysis_simple.ts  memory_leak_analysis_test.ts  minimal_arc_test.c  minimal_destructor_test.ts  minimal_gep_error_test.ts  minimal_gradual_test.ts  minimal_raii_test.ts  multiple_resources_test.ts  (+30 more)
test/system/: arc_comprehensive_tests.ts  arc_performance_tests.ts  arc_stress_tests.ts  validate_arc_tests.ts
tests/: CMakeLists.txt  MODULE_RESOLUTION_TEST_DOCUMENTATION.md  arc_basic_test.ts  arc_comprehensive_test.ts  arc_cycle_detection_tests.c  arc_reference_lifecycle.c  arc_runtime_tests.c  arc_runtime_unit_tests.c  array_comprehensive_unit_tests.ts  array_edge_cases_test.ts  array_element_access_test.ts  array_initialization_test.ts  array_integration_tests.ts  array_method_comprehensive_test.ts  array_method_integration_tests.ts  array_method_regression_tests.ts  array_method_system_tests.ts  array_method_unit_tests.ts  array_performance_benchmarks.ts  array_push_simple.ts  array_push_test.ts  array_t_basic_operations  array_t_basic_operations.ts  basic_nested_property_test.ts  complex_array_t_test.ts  complex_methods_test.ts  comprehensive_array_t_validation.ts  comprehensive_nested_property_test.ts  constrained_interfaces_simple_integration_test.ts  constructor_test.ts  debug_array_t_segfault  debug_array_t_segfault.ts  debug_array_t_test.ts  extended_generic_arrays_simple_test.ts  extended_generic_arrays_test.ts  final_array_t_validation  final_array_t_validation.ts  function_object_test.ts  generic_array_type_test.ts  generic_constraints_functions_simple  (+78 more)
tests/benchmarks/: array_performance_benchmarks.ts  benchmark_template_literals  compilation_speed_benchmark.ts  custom_exception_performance.ts  error_propagation_performance.ts  generic_interface_performance.ts  memory_usage_benchmark.ts  memory_usage_performance.ts  panic_abort_performance.ts  performance_benchmarks.ts  performance_simple.ts  raii_performance_tests.ts  try_catch_performance.ts  union_types_performance
(+948 files in other folders)
